@@ -1,3 +1,8 @@
+1998-10-25  Tanaka Akira      <akr@jaist.ac.jp>
+
+	* eword-decode.el (eword-decode-field): Abolished.
+	(eword-decode-field-body): New function.
+
 1998-10-24  Tanaka Akira      <akr@jaist.ac.jp>
 
 	* mel-b-ccl.el: New file.
